--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
                 <div class="col-xl-4 col-lg-4 col-md-4">
                     <div class="card text-center p-5">
                         <div class="p-header">
-                            <strong>Single Use</strong>
-                            <h1>$10</h1>
+                            <div class="c-header">
+                                <strong>Single Use</strong>
+                                <h1>$10</h1>
+                                <p>per month</p>
+                                <hr>
+                            </div>
                         </div>
                         <ul>
                             <li>Up to 5 urers</li>
@@ -54,8 +58,13 @@
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4"">
                     <div class="card text-center p-5">
-                        <strong>Single Use</strong>
-                        <h1>$20</h1>
+                        <div class="c-header">
+                            <strong>Single Use</strong>
+                            <h1>$20</h1>
+                            <p>per month</p>
+                            <hr>
+                        </div>
+                        
                         <ul>
                             <li>Up to 10 urers</li>
                             <li>Basic Support on github</li>
@@ -69,8 +78,13 @@
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4"">
                     <div class="card text-center p-5">
-                        <strong>Single Use</strong>
-                        <h1>$30</h1>
+                        <div class="c-header">
+                            <strong>Single Use</strong>
+                            <h1>$30</h1>
+                            <p>per month</p>
+                            <hr>
+                        </div>
+                        
                         <ul>
                             <li>Up to 20 urers</li>
                             <li>Basic Support on github</li>
